; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_mcs.c_mcs_send_cjrq.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_mcs.c_mcs_send_cjrq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [30 x i8] c"Sending CJRQ for channel #%d\0A\00", align 1
@MCS_CJRQ = common dso_local global i32 0, align 4
@g_mcs_userid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @mcs_send_cjrq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mcs_send_cjrq(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = sext i32 %4 to i64
  %6 = inttoptr i64 %5 to i8*
  %7 = call i32 @DEBUG_RDP5(i8* %6)
  %8 = call i32 @iso_init(i32 5)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @MCS_CJRQ, align 4
  %11 = shl i32 %10, 2
  %12 = call i32 @out_uint8(i32 %9, i32 %11)
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @g_mcs_userid, align 4
  %15 = call i32 @out_uint16_be(i32 %13, i32 %14)
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @out_uint16_be(i32 %16, i32 %17)
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @s_mark_end(i32 %19)
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @iso_send(i32 %21)
  ret void
}

declare dso_local i32 @DEBUG_RDP5(i8*) #1

declare dso_local i32 @iso_init(i32) #1

declare dso_local i32 @out_uint8(i32, i32) #1

declare dso_local i32 @out_uint16_be(i32, i32) #1

declare dso_local i32 @s_mark_end(i32) #1

declare dso_local i32 @iso_send(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
